replace Guava functional features with Java 8 lambdas, method refs, & streams